--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
@@ -30,9 +30,9 @@
             <button onclick="appendValue('+')">+</button>
             <button onclick="appendValue('0')">0</button>
             <button onclick="appendValue('.')">.</button>
-            <button onclick="calculateResult()">=</button>
+            <button class="equals" onclick="calculateResult()">=</button>
         </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
